--- a/source/index.html
+++ b/source/index.html
@@ -203,20 +203,20 @@
         <h1 class="visually-hidden">Money management dashboard</h1>
         <div class="container">
           <div class="main-header">
-            <div class="main-header__search">
+            <div class="main-header__search search-bar">
               <svg width="30" height="30" viewBox="0 0 26 26">
                 <use xlink:href="img/sprite.svg#icon-search"></use>
               </svg>
               <input type="text" name="search" id="find" placeholder="Search">
               <label for="find"><span class="visually-hidden">Insert the text</span></label>
             </div>
-            <div class="main-header__personal">
-              <a href="#" class="main-header__personal-add-link" aria-label="Add a note">
+            <div class="main-header__personal profile">
+              <a href="#" class="profile__add-link" aria-label="Add a note">
                 <svg width="18" height="18" viewBox="0 0 17 16">
                   <use xlink:href="img/sprite.svg#icon-plus"></use>
                 </svg>
               </a>
-              <ul class="main-header__personal-list tools">
+              <ul class="profile__list tools">
                 <li class="tools__item">
                   <a href="#" class="tools__link tools__link--unread" aria-label="Go to messages">
                     <svg width="30" height="30" viewBox="0 0 26 26">
